[gd_scene load_steps=3 format=3 uid="uid://b2mu26owq5vu8"]

[ext_resource type="Script" path="res://result.gd" id="1_oirlq"]
[ext_resource type="Texture2D" uid="uid://ci4fjcsrv57lh" path="res://Pineapple.png" id="1_vbtg4"]

[node name="Result" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_oirlq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(512, 512)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -298.0
offset_right = 256.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vbtg4")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -69.5
offset_right = 78.5
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "0점"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CleartimeLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -131.5
offset_top = -100.0
offset_right = 131.5
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "클리어 시간"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.5
offset_top = -90.0
offset_right = 36.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "시작 메뉴"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "다시 하기"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
